--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 Autores del curso
 
 ingenieroariel,	Ariel Nunez, ingenieroariel@gmail.com
-sepirothem, Emmanuel Rosales, sepirothem@gmail.com 
+sepirothem, Emmanuel Rosales, sepirothem@gmail.com
+
+Gracias a todos los contribuyentes.
