--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Autores del curso
 
 ingenieroariel,	Ariel Nunez, ingenieroariel@gmail.com
 sepirothem, Emmanuel Rosales, sepirothem@gmail.com 
+juancabo, Juan Carlos Borrero, juancabo@gmail.com
