--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@ Autores del curso
 
 ingenieroariel,	Ariel Nunez, ingenieroariel@gmail.com
 sepirothem, Emmanuel Rosales, sepirothem@gmail.com 
+danieldelarosa, Daniel De la rosa, danndelarosam@gmail.com
+nanycarbonell, Nancy Carbonell, nancycarbonellp@gmail.com
