--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@ Autores del curso
 
 ingenieroariel,	Ariel Nunez, ingenieroariel@gmail.com
 sepirothem, Emmanuel Rosales, sepirothem@gmail.com 
+
+jwingenieros, willinggton, willington100@hotmai..com
