agregue mi usuario

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Autores del curso
 ingenieroariel,	Ariel Nunez, ingenieroariel@gmail.com
 sepirothem, Emmanuel Rosales, sepirothem@gmail.com 
 hackvan, Diego Camacho, hackvan@gmail.com
+piegope, Pier Gotta, piegope@gmail.com
