--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ jwingenieros, willinggton, willington100@hotmai..com
 danieldelarosa, Daniel De la rosa, danndelarosam@gmail.com
 nanycarbonell, Nancy Carbonell, nancycarbonellp@gmail.com
 Andresfroble, Andres F Robles, andresfrobles1@hotmail.com
+agarciagaray, Alejandro Garcia Garay, alejandro.garcia.garay@gmail.com
 
 Gracias a todos los contribuyentes.
