Agregado apellido ficticio a nombre de Willington, por favor actualizar

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ hackvan, Diego Camacho, hackvan@gmail.com
 piegope, Pier Gotta, piegope@gmail.com
 juancabo, Juan Carlos Borrero, juancabo@gmail.com
 hackvan, Diego Camacho, hackvan@gmail.com
-jwingenieros, willinggton, willington100@hotmai..com
+jwingenieros, Willington Ortiz, willington100@hotmail.com
 danieldelarosa, Daniel De la rosa, danndelarosam@gmail.com
 nanycarbonell, Nancy Carbonell, nancycarbonellp@gmail.com
 Andresfroble, Andres F Robles, andresfrobles1@hotmail.com
